--- a/css/style.css
+++ b/css/style.css
@@ -189,23 +189,23 @@ h5 {
 
 /* --------------------------------------サイドメニュー(ページ遷移)------------------------------------ */
 #pagination {
-  box-sizing: content-box;
+  box-sizing: border-box;
   top: 0px;
   height: 100%;
   width: 36rem;
   position: fixed;
   background-color: rgba(129, 129, 129, 0.6);
-  text-align: center;
-  display: table;
+  display: flex;
 }
 
-.li1 {
-  font-size: 4rem;
+.menu {
+  margin: auto;
+  display: grid;
+  place-items: center;
 }
 
-.li2 , .li3 , .li4 {
-  margin-top: 3rem;
-  font-size: 3.5rem;
+.menu a {
+  font-size: 3rem;
 }
 
 a {
@@ -215,6 +215,14 @@ a {
 }
 
 .pagination a.active {
-  transform: scale(1.8);
+  transform: scale(1.3);
+}
+
+.li1 {
+  font-size: 3rem;
+}
+
+.li2 {
+  margin-top: 2rem;
 }
 /* --------------------------------------/サイドメニュー(ページ遷移)------------------------------------ */
