--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@ html {
 
 body {
   background-image: url(../images/backimgc.png);
+  font-family: "Copperplate" , "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN","HG明朝E","ＭＳ Ｐ明朝","ＭＳ 明朝",serif,"ヒラギノ角ゴシック",Hiragino Sans;
+  font-weight: 500;
+  line-height: 1;
+}
+
+a {
+  text-decoration: none;
+  color: aliceblue;
 }
 /* ----------------------------------------------メイン----------------------------------------------- */
 #main1{
@@ -22,7 +30,7 @@ body {
 }
 
 .title {
- margin-top: 28vh;
+ margin-top: 32vh;
 }
 
 h1 {
@@ -30,23 +38,24 @@ h1 {
 }
 
 .name {
+  margin-top: 2vh;
   font-size: 4rem;
 }
 
 .aboutjob {
-  margin-top: 5vw;
+  margin-top: 7.5vw;
   font-size: 3rem;
   position: relative;
   left: -20vw;
 }
 
 .job {
-  margin-top: 2vh;
+  margin-top: 3.5vh;
   font-size: 3.7rem;
 }
 
 .joben {
-  margin-top: 2vh;
+  margin-top: 3.5vh;
   font-size: 2.5rem;
 }
 /* ----------------------------------------------/メイン----------------------------------------------- */
@@ -73,22 +82,27 @@ h3 {
 }
 
 .skill {
+  margin-top: 2vh;
   font-size: 4.5rem;
 }
 
 .months {
+  margin-top: 2vh;
   font-size: 4.5rem;
 }
 
 .skillname {
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
 
 .experience {
+  font-family: Arial, Helvetica, sans-serif;
   margin-left: 20%;
 }
 
 .experience2 {
+  font-family: Arial, Helvetica, sans-serif;
   margin-left: 13%;
 }
 .skillbox {
@@ -110,15 +124,29 @@ h4 {
   font-size: 5rem;
   margin-bottom: 3%;
 }
+.list1 {
+  margin-top: 5vh;
+}
 
 .listname1 {
   font-size: 4rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .url1 {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
+}
+
+.url1 a {
+  font-size: 3rem;
+  color: rgb(171, 172, 173);
+  transition: all 0.3s ease 0s;
+}
+.url1 a:hover {
+  color: aliceblue;
+  transform: scale(1.2,1.2);
 }
 
 .sample1 {
@@ -143,6 +171,7 @@ h5 {
 }
 
 .contact {
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 20%;
   display: flex;
 }
@@ -166,6 +195,20 @@ h5 {
 .address p {
   margin-top: 3vh;
 }
+
+.address a {
+  display: block;
+  margin-top: 3vh;
+  color: rgb(171, 172, 173);
+  transition: all 0.3s ease 0s;
+}
+
+.address a:hover {
+  color: aliceblue;
+  transform: scale(1.1,1.1);
+}
+
+
 /* --------------------------------------/メイン４------------------------------------ */
 
 /* --------------------------------------スクロール------------------------------------ */
@@ -206,16 +249,15 @@ h5 {
 
 .menu a {
   font-size: 3rem;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
 }
-
-a {
-  text-decoration: none;
-  color: aliceblue;
-  transition: transform 0.2s;
+.menu a:hover {
+  transform: scale(1.2,1.2);
 }
 
 .pagination a.active {
-  transform: scale(1.3);
+  transform: scale(1.8);
 }
 
 .li1 {
@@ -223,6 +265,6 @@ a {
 }
 
 .li2 {
-  margin-top: 2rem;
+  margin-top: 7vh;
 }
 /* --------------------------------------/サイドメニュー(ページ遷移)------------------------------------ */
