--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
   text-decoration: none;
   color: aliceblue;
 }
-/* ----------------------------------------------メイン----------------------------------------------- */
+/* ----------------------------------------------メインpc----------------------------------------------- */
 #main1{
   color: aliceblue;
   margin-left: 36rem;
@@ -30,7 +30,7 @@ a {
 }
 
 .title {
- margin-top: 32vh;
+  margin-top: 32vh;
 }
 
 h1 {
@@ -58,9 +58,9 @@ h1 {
   margin-top: 3.5vh;
   font-size: 2.5rem;
 }
-/* ----------------------------------------------/メイン----------------------------------------------- */
+/* ----------------------------------------------/メインpc----------------------------------------------- */
 
-/* --------------------------------------メイン２------------------------------------ */
+/* --------------------------------------メイン２pc------------------------------------ */
 #main2 {
   color: aliceblue;
   margin-left: 36rem;
@@ -109,8 +109,8 @@ h3 {
   display: flex;
   justify-content: flex-end;
 }
-/* --------------------------------------/メイン２------------------------------------ */
-/* --------------------------------------メイン３------------------------------------ */
+/* --------------------------------------/メイン２pc------------------------------------ */
+/* --------------------------------------メイン３pc------------------------------------ */
 #main3 {
   color: aliceblue;
   margin-left: 36rem;
@@ -153,8 +153,8 @@ h4 {
   margin: 0 auto;
   display: block;
 }
-/* --------------------------------------/メイン３------------------------------------ */
-/* --------------------------------------メイン４------------------------------------ */
+/* --------------------------------------/メイン３pc------------------------------------ */
+/* --------------------------------------メイン４pc------------------------------------ */
 #main4 {
   color: aliceblue;
   margin-left: 36rem;
@@ -208,7 +208,7 @@ h5 {
 }
 
 
-/* --------------------------------------/メイン４------------------------------------ */
+/* --------------------------------------/メイン４pc------------------------------------ */
 
 /* --------------------------------------スクロール------------------------------------ */
 .fullPageScroll {
@@ -229,7 +229,7 @@ h5 {
 }
 /* --------------------------------------/全ページ共通指定------------------------------------ */
 
-/* --------------------------------------サイドメニュー(ページ遷移)------------------------------------ */
+/* --------------------------------------サイドメニュー(ページ遷移)pc------------------------------------ */
 #pagination {
   box-sizing: border-box;
   top: 0px;
@@ -266,4 +266,13 @@ h5 {
 .li2 {
   margin-top: 7vh;
 }
-/* --------------------------------------/サイドメニュー(ページ遷移)------------------------------------ */
+/* --------------------------------------/サイドメニュー(ページ遷移)pc------------------------------------ */
+@media only screen and (max-width:1280px) {
+  html {
+    font-size: 8px;
+  }
+}
+
+@media only screen and (max-width:1024px) {
+  
+}
