レスポンシブ　タブレットからsectionのpaddingなし

--- a/css/style.css
+++ b/css/style.css
@@ -275,10 +275,16 @@ h5 {
     font-size: 8px;
   }
 }
-
+/* --------------------------------------タブレット表示------------------------------------ */
 @media only screen and (max-width:1024px) {
-
+  .section {
+    padding: 0;
+  }
+  .menu a {
+    font-size: 4.2rem;
+  }
 }
+/* --------------------------------------/タブレット表示------------------------------------ */
 
 @media only screen and (max-width:1024px) {
 
