--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,16 @@ a {
 p {
   color: aliceblue;
 }
+
+#allura {
+  font-family: 'Allura', cursive;
+  font-size: 2.5rem;
+}
 /* ----------------------------------------------メインpc----------------------------------------------- */
 #main1{
   color: aliceblue;
   margin-left: 36rem;
   padding: 2rem 4rem;
-  text-align: center;
   display: flex;
   flex-direction: column;
 }
@@ -261,7 +265,6 @@ h5 {
   position: relative;
   top: -20rem;
   text-align: center;
-  font-size: 2.2rem;
 }
 
 #pagination {
@@ -300,6 +303,11 @@ h5 {
 
 .li2 {
   margin-top: 7vh;
+}
+
+.myjob {
+  position: relative;
+  bottom: -20rem;
 }
 /* --------------------------------------/サイドメニュー(ページ遷移)pc------------------------------------ */
 @media screen and (max-width:1280px) {
