デモサイト１へのリンク設置

--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,9 @@ h4 {
   margin-top: 8%;
   margin-bottom: 3%;
 }
-.list1 {
+.list {
   margin-top: 5vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .listname1 {
